# jwtsign

./: .flake8  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
jwtsigner/: __init__.py  cli.py  signer.py
tests/: test_signer.py
