[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jwtsigner"
version = "0.1.0"
description = "A CLI tool for creating, reading, and editing JWT tokens with RS256."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pyjwt[crypto]",
    "cryptography"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8"
]

[project.scripts]
jwtsigner = "jwtsigner.cli:main"

[tool.setuptools.packages.find]
where = ["jwtsigner"]
